--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,14 +1,14 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@pumpkin-very-dark: #373431; // Very dark brown (background)
-@pumpkin-dark: #6b5e51; // Dark brown (comments)
-@pumpkin-mid-1: #98662a; // Medium brown 1 (keywords)
-@pumpkin-mid-2: #b48e58; // Medium brown 2 (base)
-@pumpkin-orange: #ee9f20; // Orange (functions)
-@pumpkin-yellow-1: #e3b732; // Dark yellow (process)
-@pumpkin-yellow-2: #f9d872; // Yellow (strings)
-@pumpkin-green-1: #7f9964; // Dark green (numbers)
-@pumpkin-green-2: #8bc34a; // Light green (constructors/console)
+@aqua-very-dark: #293133; // Very dark blue (background)
+@aqua-dark: #3F5858; // Dark blue (comments)
+@aqua-mid-1: #98662a; // Medium brown 1 (keywords)
+@aqua-mid-2: #b48e58; // Medium brown 2 (base)
+@aqua-orange: #EC9E49; // Lighter Orange (functions)
+@aqua-yellow-1: #7DD59B; // Green Ocean Spray (process)
+@aqua-yellow-2: #7DD5C8; // Ocean Spray (strings)
+@aqua-green-1: #82C5E3; // Carolina Blue (numbers)
+@aqua-green-2: #8bc34a; // Light green (constructors/console)
 
 // Git colors
 @git-blue: #4397da;
