--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,25 +4,25 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: @pumpkin-mid-2;
-@syntax-cursor-color: @pumpkin-yellow-1;
-@syntax-selection-color: lighten(@pumpkin-very-dark, 6%);
-@syntax-background-color: @pumpkin-very-dark;
+@syntax-text-color: @aqua-mid-2;
+@syntax-cursor-color: @aqua-yellow-1;
+@syntax-selection-color: lighten(@aqua-very-dark, 6%);
+@syntax-background-color: @aqua-very-dark;
 
 // Guide colors
-@syntax-wrap-guide-color: @pumpkin-dark;
-@syntax-indent-guide-color: @pumpkin-dark;
-@syntax-invisible-character-color: @pumpkin-dark;
+@syntax-wrap-guide-color: @aqua-dark;
+@syntax-indent-guide-color: @aqua-dark;
+@syntax-invisible-character-color: @aqua-dark;
 
 // For find and replace markers
-@syntax-result-marker-color: @pumpkin-orange;
-@syntax-result-marker-color-selected: @pumpkin-yellow-2;
+@syntax-result-marker-color: @aqua-orange;
+@syntax-result-marker-color-selected: @aqua-yellow-2;
 
 // Gutter colors
-@syntax-gutter-text-color: @pumpkin-dark;
-@syntax-gutter-text-color-selected: @pumpkin-dark;
-@syntax-gutter-background-color: @pumpkin-very-dark;
-@syntax-gutter-background-color-selected: darken(@pumpkin-very-dark, 4%);
+@syntax-gutter-text-color: @aqua-dark;
+@syntax-gutter-text-color-selected: @aqua-dark;
+@syntax-gutter-background-color: @aqua-very-dark;
+@syntax-gutter-background-color-selected: darken(@aqua-very-dark, 4%);
 
 // For git diff info. i.e. in the gutter
 @syntax-color-renamed: @git-blue;
